--- a/lab-sorting/index.html
+++ b/lab-sorting/index.html
@@ -39,7 +39,7 @@
       return arr;
     }
 
-    // Основна функція для сортування масиву
+    // Оголошуємо runAll в глобальній області видимості
     window.runAll = function(isSparse) {
       const output = document.getElementById('output');
       const mode = isSparse ? 'Розріджений' : 'Нерозріджений';
