--- a/lab-sorting/index.html
+++ b/lab-sorting/index.html
@@ -1,79 +1,34 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Демонстрація сортувань</title>
-  <style>
-    body { font-family: sans-serif; padding: 20px; }
-    button { margin: 5px; padding: 10px; }
-    pre { background: #f0f0f0; padding: 10px; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sorting Algorithms Demo</title>
 </head>
 <body>
-  <h1>Демонстрація сортувань з бібліотеки SortLib</h1>
+    <h1>Sorting Algorithms in JavaScript</h1>
+    <script src="sortingLibrary.js"></script>
+    <script>
+        // Нерозріджений масив (без undefined елементів)
+        let normalArray = [5, 3, 8, 1, 2, 7, 6, 4, 9, 10];
+        let sparseArray = [5, 3, 8, undefined, 2, undefined, 6, 4, undefined, 10];
 
-  <button onclick="runAll(false)">▶ Нерозріджений масив</button>
-  <button onclick="runAll(true)">▶ Розріджений масив</button>
+        // Демонстрація сортування на нормальному масиві
+        console.log("Normal Array (Ascending):");
+        console.log(bubbleSort([...normalArray], true));
+        console.log(selectionSort([...normalArray], true));
+        console.log(insertionSort([...normalArray], true));
+        console.log(shellSort([...normalArray], true));
+        console.log(quickSort([...normalArray], true));
 
-  <pre id="output"></pre>
-
-  <!-- Спочатку підключаємо бібліотеку -->
-  <script type="module" src="lab-sorting/sortLib.js"></script>
-  
-  <!-- Потім підключаємо основний скрипт, який викликає функцію runAll -->
-  <script type="module">
-    import SortLib from './lab-sorting/sortLib.js';
-
-    // Генерація масиву (як нерозрідженого, так і розрідженого)
-    function generateArray(length = 100, sparse = false) {
-      const arr = [];
-      for (let i = 0; i < length; i++) {
-        arr[i] = Math.floor(Math.random() * 1000);
-      }
-      if (sparse) {
-        for (let i = 0; i < length / 5; i++) {
-          const index = Math.floor(Math.random() * length);
-          arr[index] = undefined;
-        }
-      }
-      return arr;
-    }
-
-    // Оголошуємо runAll в глобальній області видимості
-    window.runAll = function(isSparse) {
-      const output = document.getElementById('output');
-      const mode = isSparse ? 'Розріджений' : 'Нерозріджений';
-      const arr = generateArray(100, isSparse);
-
-      output.textContent = `${mode} масив:\n` + JSON.stringify(arr, null, 2) + '\n\n' +
-        'Результати у консолі браузера';
-
-      console.clear();
-      console.log(`%c${mode} масив для сортування:`, 'color:blue; font-weight:bold;');
-      console.log(arr);
-
-      // Массив методів сортування
-      const methods = [
-        ['bubbleSort', SortLib.bubbleSort],
-        ['selectionSort', SortLib.selectionSort],
-        ['insertionSort', SortLib.insertionSort],
-        ['shellSort', SortLib.shellSort],
-        ['quickSort', SortLib.quickSort],
-      ];
-
-      // Сортуємо кожним методом по черзі
-      for (const [name, method] of methods) {
-        console.groupCollapsed(`${name} (за зростанням)`);
-        const sortedAsc = method(arr, true);
-        console.log("Відсортовано:", sortedAsc);
-        console.groupEnd();
-
-        console.groupCollapsed(`${name} (за спаданням)`);
-        const sortedDesc = method(arr, false);
-        console.log("Відсортовано:", sortedDesc);
-        console.groupEnd();
-      }
-    }
-  </script>
+        // Демонстрація сортування на розрідженому масиві
+        console.log("Sparse Array (Ascending):");
+        handleSparseArray(sparseArray);
+        console.log(bubbleSort([...sparseArray], true));
+        console.log(selectionSort([...sparseArray], true));
+        console.log(insertionSort([...sparseArray], true));
+        console.log(shellSort([...sparseArray], true));
+        console.log(quickSort([...sparseArray], true));
+    </script>
 </body>
 </html>
